Revision history for Dist-Metadata

{{$NEXT}}

  [Fixes]
  - Work around weird, possible perl bug (described at http://bit.ly/mhaQ4x)
    that made Struct->file_content return undef for IO-like objects

  [Prereqs]
  - use Path::Class instead of File::Spec

  [Documentation]
  - Clarify details of module's purpose in Pod Description

  [Testing]
  - Add dist format tests
  - Report version of JSON::PP (if any) installed to help debug
    troublesome smoke testing environments

0.904     2011-06-24T06:09:23Z

  - Fix path mismatch for "provides" when using Module::Metadata on Win32
  - Add more TODO ideas

0.903     2011-06-23T05:59:41Z

  - Load File::Spec (and subclasses) consistently

0.902     2011-06-23T05:51:42Z

  [Fixes]
  - Change determine_packages to always return paths in unix format
    (as required by CPAN::Meta::Spec)
  - Fix regexp path bugs on windows

  [Enhancements]
  - Include 'xt/' in the default no_index:directory list

  [Documentation]
  - Add items to pod TODO list

0.901     2011-06-22T01:22:07Z

  - Initial release