@@ -13,5 +13,6 @@ disable_tests = PortabilityTests
 -StopWords.include = TODO dist dists dir unix
 [Prereqs]
 File::Temp = 0.19 ; newdir
+File::Spec::Native = 1.002
 [Run::BeforeBuild]
 run = corpus/make_dists
